force-app/main/default/objects/Team_Member__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>If there is no related Contact or User, enter the team member&#39;s name here</inlineHelpText>
    <label>Name</label>
    <length>165</length>
    <required>true</required>
    <type>Text</type>
</CustomField>